# xalode

./: CMakeLists.txt  setup.py
demo/: singlecell.py  test.py
extension_modules/: __init__.py
extension_modules/include/: cressman.h  fitzhugh.h  forward_euler.h  morris_lecar.h  noble.h  nocellmodel.h  odebase.h  simpleode.h  synaptic.h  test_petsc_ext_module.h  utils.h  vectorised_cressman.h
include/: cressman.h  fitzhugh.h  forward_euler.h  odebase.h
scratch/: cressman.h  cressman_rhs.h  fhn.py  forward_euler.h  modular.h  rk4.h  set_local.py  utils.h
scratch/include/: a.out  cressman.h  fitzhugh.h  forward_euler.h  test_odeint.cpp
src/: main.cpp
